update v1.6
